<?xml version="1.0" encoding="utf-8"?>


    <!-- Layout for our Settings Activity, containing a Preference Fragment -->
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android"
android:title="@string/settings_title">

<ListPreference
    android:defaultValue="@string/settings_order_by_default"
    android:entries="@array/settings_order_by_labels"
    android:entryValues="@array/settings_order_by_values"
    android:key="@string/settings_order_by_key"
    android:title="@string/settings_order_by_label" />

<EditTextPreference
    android:defaultValue="@string/settings_number_of_news_default"
    android:inputType="numberDecimal"
    android:key="@string/settings_number_of_news_key"
    android:selectAllOnFocus="true"
    android:title="@string/settings_number_of_news_label" />

</PreferenceScreen>

